--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!--link to style page-->
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="/assets/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat"
       rel="stylesheet"
