--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="content">
       <!-- Section 1- about me  -->
       <div id="about-me" class="work">
-        <img src="Assets/images/gabiabout.jpeg" />
+        <img src="assets/images/gabiabout.jpeg" />
         <h1>About me</h1>
         <p>
           Petroleum and Gas Engineer with a post degree in Project Management
@@ -63,7 +63,7 @@
 
         <div class="container">
           <div class="projects">
-            <img src="./Assets/images/ctp2.jpg" alt="Avatar" class="image" />
+            <img src="assets/images/ctp2.jpg" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="projects">
-            <img src="./Assets/images/MJ.jpg" alt="Avatar" class="image" />
+            <img src="assets/images/MJ.jpg" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a
