--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               ></a>
             </li>
             <li>
-              <a href="https://wwww.twitter.com/gabrielaalb"
+              <a href="https://www.twitter.com/gabrielaalb"
                 ><i class="fab fa-twitter" aria-hidden="true"></i
               ></a>
             </li>
@@ -111,7 +111,7 @@
               ></a>
             </li>
             <li>
-              <a href="https://wwww.instagram.com/gabriealb"
+              <a href="https://www.instagram.com/gabriealb"
                 ><i class="fab fa-instagram" aria-hidden="true"></i
               ></a>
             </li>
