--- a/index.html
+++ b/index.html
@@ -95,23 +95,23 @@
         <div class="parallax">
           <ul>
             <li>
-              <a href="https://www.facebook.com/gabriela.alb"
+              <a href="https://www.facebook.com/gabriela.alb" target="_blank"
                 ><i class="fab fa-facebook" aria-hidden="true"></i
               ></a>
             </li>
             <li>
-              <a href="https://www.twitter.com/gabrielaalb"
+              <a href="https://www.twitter.com/gabrielaalb" target="_blank"
                 ><i class="fab fa-twitter" aria-hidden="true"></i
               ></a>
             </li>
 
             <li>
-              <a href="https://www.linkedin.com/in/gabrielacla"
+              <a href="https://www.linkedin.com/in/gabrielacla" target="_blank"
                 ><i class="fab fa-linkedin" aria-hidden="true"></i
               ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/gabriealb"
+              <a href="https://www.instagram.com/gabriealb" target="_blank"
                 ><i class="fab fa-instagram" aria-hidden="true"></i
               ></a>
             </li>
