--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/gabriealb" target="_blank"
+              <a href="https://www.instagram.com/gabrielaalb" target="_blank"
                 ><i class="fab fa-instagram" aria-hidden="true"></i
               ></a>
             </li>
