--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
               </div>
             </div>
           </div>
+          <div class="projects">
+            <img src="assets/images/BW.jpg" alt="Avatar" class="image" />
+            <div class="overlay">
+              <div class="text">
+                <a
+                  href="https://cvanbreda91.github.io/bark-woof/"
+                  target="_blank"
+                >
+                 Bark Woof</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div id="contact" class="contact">
