--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
             </div>
           </div>
            <div class="projects">
-            <img src="assets/images/BW.jpg" alt="Avatar" class="image" />
+            <img src="assets/images/lt.jpg" alt="Avatar" class="image" />
             <div class="overlay">
               <div class="text">
                 <a
-                  href="https://cvanbreda91.github.io/bark-woof/"
+                  href="https://vast-beach-17756.herokuapp.com/"
                   target="_blank"
                 >
-                 Bark Woof</a
+                 Life Tracker</a
                 >
               </div>
             </div>
