--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
               </div>
             </div>
           </div>
+           <div class="projects">
+            <img src="assets/images/serfsmarket.png" alt="Avatar" class="image" />
+            <div class="overlay">
+              <div class="text">
+                <a
+                  href="https://serfs-market.herokuapp.com/"
+                  target="_blank"
+                >
+                  The Serf's Market </a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div id="contact" class="contact">
